try to fix formatting error

--- a/episodes/mouse-human-alignment.Rmd
+++ b/episodes/mouse-human-alignment.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Mouse-human alignment of transcriptomic signatures'
+title: "Mouse-human alignment of transcriptomic signatures"
 teaching: 60
 exercises: 40
 ---
