order sessionInfo and keypoints

--- a/episodes/differential-expression-analysis.Rmd
+++ b/episodes/differential-expression-analysis.Rmd
@@ -642,3 +642,9 @@ sessionInfo()
 ```
 
 
+::::::::::::::::::::::::::::::::::::: keypoints 
+
+- Use your Synapse login credentials to access the Portal.
+- Use Synapser package to download data from the Portal.
+
+::::::::::::::::::::::::::::::::::::::::::::::::
