--- a/episodes/exploring-data-in-synapse.Rmd
+++ b/episodes/exploring-data-in-synapse.Rmd
@@ -20,73 +20,84 @@ exercises: 10
 ::::::::::::::::::::::::::::::::::::::::::::::::
 
 ```{r, echo=FALSE}
-suppressPackageStartupMessages(library(dplyr))
+suppressPackageStartupMessages(library(`dplyr`))
 suppressPackageStartupMessages(library(tidyverse))
 ```
 ## Working with AD Portal metadata 
 
 **Metadata basics** 
 
-We have now downloaded
-several metadata files and an RNAseq counts file from the portal. For
-our next exercises, we want to read those files in as R data so we can
-work with them.
+We have now downloaded several metadata files and an RNAseq counts file from the
+portal. For our next exercises, we want to read those files in as R data so we 
+can work with them.
 
-We can see from the download_table we got during the bulk download step
+We can see from the `download_table` we got during the bulk download step
 that we have five metadata files. Two of these should be the individual
 and biospecimen files, and three of them are assay metadata files.
+
 ```{r, eval=FALSE}
 download_table %>% 
-  dplyr::select(name, metadataType, assay)
+  `dplyr`::select(name, metadataType, assay)
 ```
 
 We are only interested in RNAseq data, so we will only read in the
 individual, biospecimen, and RNAseq assay metadata files.
+
 ```{r}
 # counts matrix
-counts <- read_tsv("data/htseqcounts_5XFAD.txt", show_col_types = FALSE)
+counts <- read_tsv("data/htseqcounts_5XFAD.txt", 
+                   show_col_types = FALSE)
 
 # individual metadata
-ind_meta <- read_csv("data/Jax.IU.Pitt_5XFAD_individual_metadata.csv", show_col_types = FALSE)
+ind_meta <- read_csv("data/Jax.IU.Pitt_5XFAD_individual_metadata.csv", 
+                     show_col_types = FALSE)
 
 # biospecimen metadata
-bio_meta <- read_csv("data/Jax.IU.Pitt_5XFAD_biospecimen_metadata.csv", show_col_types = FALSE)
+bio_meta <- read_csv("data/Jax.IU.Pitt_5XFAD_biospecimen_metadata.csv", 
+                     show_col_types = FALSE)
 
 #assay metadata
-rna_meta <- read_csv("data/Jax.IU.Pitt_5XFAD_assay_RNAseq_metadata.csv", show_col_types = FALSE)
+rna_meta <- read_csv("data/Jax.IU.Pitt_5XFAD_assay_RNAseq_metadata.csv", 
+                     show_col_types = FALSE)
 ```
 
 Let’s examine the data and metadata files a bit before we begin our
 analyses.
 
 **Counts data**
+
 ```{r}
-# Calling a tibble object will print the first ten rows in a nice tidy output; doing the same for a base R dataframe will print the whole thing until it runs out of memory. If you want to inspect a large dataframe, use `head(df)`
+# Calling a tibble object will print the first ten rows in a nice tidy output; 
+# doing the same for a base R dataframe will print the whole thing until it runs 
+# out of memory. If you want to inspect a large dataframe, use `head(df)`
 counts
 ```
 
 The data file has a column of ENSEMBL gene ids and then a bunch of
 columns with count data, where the column headers correspond to the
-specimenIDs. These specimenIDs should all be in the RNAseq assay
+`specimenID`s. These `specimenID`s should all be in the RNAseq assay
 metadata file, so let’s check.
+
 ```{r}
 # what does the RNAseq assay metadata look like?
 rna_meta
 ```
 
 ```{r}
-# are all the column headers from the counts matrix (except the first "gene_id" column) in the assay metadata?
-all(colnames(counts[-1]) %in% rna_meta$specimenID)
+# are all the column headers from the counts matrix 
+# (except the first "gene_id" column) in the assay metadata?
+all(colnames(counts[-1]) %in% rna_meta$`specimenID`)
 ```
 
 **Assay metadata** 
 
 The assay metadata contains information about how data
-was generated on each sample in the assay. Each specimenID represents a
-unique sample. We can use some tools from dplyr to explore the metadata.
+was generated on each sample in the assay. Each `specimenID` represents a
+unique sample. We can use some tools from `dplyr` to explore the metadata.
+
 ```{r}
 # how many unique specimens were sequenced?
-n_distinct(rna_meta$specimenID)
+n_distinct(rna_meta$`specimenID`)
 ```
 
 ```{r}
@@ -101,30 +112,31 @@ distinct(rna_meta, sequencingBatch)
 
 **Biospecimen metadata** 
 
-The biospecimen metadata contains specimen-level
-information, including organ and tissue the specimen was taken from, how
-it was prepared, etc. Each specimenID is mapped to an individualID.
+The biospecimen metadata contains specimen-level information, including organ 
+and tissue the specimen was taken from, how it was prepared, etc. Each 
+`specimenID` is mapped to an `individualID`.
+
 ```{r}
 # all specimens from the RNAseq assay metadata file should be in the biospecimen file
-all(rna_meta$specimenID %in% bio_meta$specimenID)
+all(rna_meta$`specimenID` %in% bio_meta$`specimenID`)
 ```
 
 ```{r}
 # but the biospecimen file also contains specimens from different assays
-all(bio_meta$specimenID %in% rna_meta$specimenID)
+all(bio_meta$`specimenID` %in% rna_meta$`specimenID`)
 ```
 
 **Individual metadata** 
 
-The individual metadata contains information about
-all the individuals in the study, represented by unique individualIDs.
-For humans, this includes information on age, sex, race, diagnosis, etc.
-For MODEL-AD mouse models, the individual metadata has information on
-model genotypes, stock numbers, diet, and more.
+The individual metadata contains information about all the individuals in the 
+study, represented by unique `individualID`s. For humans, this includes 
+information on age, sex, race, diagnosis, etc. For MODEL-AD mouse models, the
+individual metadata has information on model genotypes, stock numbers, diet, and 
+more.
 
 ```{r}
-# all individualIDs in the biospecimen file should be in the individual file
-all(bio_meta$individualID %in% ind_meta$individualID)
+# all `individualID`s in the biospecimen file should be in the individual file
+all(bio_meta$`individualID` %in% ind_meta$`individualID`)
 ```
 
 ```{r}
@@ -134,23 +146,24 @@ distinct(ind_meta, genotype)
 
 **Joining metadata** 
 
-We use the three-file structure for our metadata
-because it allows us to store metadata for each study in a tidy format.
-Every line in the assay and biospecimen files represents a unique
-specimen, and every line in the individual file represents a unique
-individual. This means the files can be easily joined by specimenID and
-individualID to get all levels of metadata that apply to a particular
-data file. We will use the left_join() function from the dplyr package,
-and the %\>% operator from the magrittr package. If you are unfamiliar
-with the pipe, think of it as a shorthand for “take this (the preceding
-object) and do that (the subsequent command)”. See here (https://magrittr.tidyverse.org/) 
-for more info on piping in R.
+We use the three-file structure for our metadata because it allows us to store 
+metadata for each study in a tidy format. Every line in the assay and 
+biospecimen files represents a unique specimen, and every line in the individual 
+file represents a unique individual. This means the files can be easily joined 
+by `specimenID` and `individualID` to get all levels of metadata that apply to a
+particular data file. We will use the `left_join()` function from the `dplyr` 
+package, and the `%\>%` operator from the `magrittr` package. If you are 
+unfamiliar with the pipe, think of it as a shorthand for “take this (the 
+preceding object) and do that (the subsequent command)”. See [magrittr](https://magrittr.tidyverse.org/) for more info on piping in R.
 
 ```{r}
-# join all the rows in the assay metadata that have a match in the biospecimen metadata
-joined_meta <- rna_meta %>% #start with the rnaseq assay metadata
-  left_join(bio_meta, by = "specimenID") %>%  #join rows from biospecimen that match specimenID 
-  left_join(ind_meta, by = "individualID") # join rows from individual that match individualID
+# join all the rows in the assay metadata
+# that have a match in the biospecimen metadata
+joined_meta <- rna_meta %>%               # start with the rnaseq assay metadata
+  left_join(bio_meta, by = "specimenID") %>%  # join rows from biospecimen 
+                                                # that match specimenID 
+  left_join(ind_meta, by = "individualID") # join rows from individual 
+                                              # that match individualID
 
 joined_meta
 ```
@@ -160,38 +173,61 @@ metadata on each specimen in the RNAseq data from this study. This
 procedure can be used to join the three types of metadata files for
 every study in the AD Knowledge Portal, allowing you to filter
 individuals and specimens as needed based on your analysis criteria!
+
 ```{r}
 library(lubridate)
 
 # convert columns of strings to month-date-year format
 joined_meta_time <- joined_meta %>% 
   mutate(dateBirth = mdy(dateBirth), dateDeath = mdy(dateDeath)) %>% 
-  # create a new column that subtracts dateBirth from dateDeath in days, then divide by 30 to get months
+  
+  # create a new column that subtracts dateBirth from dateDeath in days, 
+  # then divide by 30 to get months
   mutate(timepoint = as.numeric(difftime(dateDeath, dateBirth, units ="days"))/30) %>% 
+  
   # convert numeric ages to timepoint categories
   mutate(timepoint = case_when(timepoint > 10 ~ "12 mo",
                                timepoint < 10 & timepoint > 5 ~ "6 mo",
                                timepoint < 5 ~ "4 mo"))
 
 covars_5XFAD <- joined_meta_time %>%
-  dplyr::select(individualID, specimenID, sex, genotype, timepoint) %>% distinct() %>% as.data.frame()
+  dplyr::select(individualID, specimenID, sex, genotype, timepoint) %>% 
+  distinct() %>% 
+  as.data.frame()
 rownames(covars_5XFAD) <- covars_5XFAD$specimenID
 
 head(covars_5XFAD)
 ```
 
-We will save joined_meta for the next lesson.
+We will save `joined_meta` for the next lesson.
+
 ```{r}
 saveRDS(covars_5XFAD, file = "data/covars_5XFAD.rds")
 ```
 
 ## Single Specimen files
 
-For files that contain data from a single specimen (e.g. raw sequencing files, raw mass spectra, etc.), we can use the Synapse annotations to associate these files with the appropriate metadata.
+For files that contain data from a single specimen (e.g. raw sequencing files, 
+raw mass spectra, etc.), we can use the Synapse annotations to associate these 
+files with the appropriate metadata.
 
-Excercise 3: Use Explore Data to find all RNAseq files from the Jax.IU.Pitt_5XFAD study. If we filter for data where Study = “Jax.IU.Pitt_5XFAD” and Assay = “rnaSeq” we will get a list of 148 files, including raw fastqs and processed counts data.
+::::::::::::::::::::::::::::::::::::: challenge
 
-Synapse entity annotations We can use the function synGetAnnotations to view the annotations associated with any file without downloading the file.
+## Exercise
+
+Use *Explore Data* to find all RNAseq files from the `Jax.IU.Pitt_5XFAD` study. 
+If we filter for data where `Study = "Jax.IU.Pitt_5XFAD"` and `Assay = "rnaSeq"`
+we will get a list of 148 files, including raw fastqs and processed counts data.
+
+:::::::::::::::: solution
+
+:::::::::::::::::::::::::
+:::::::::::::::::::::::::::::::::::::::::::::::
+
+
+We can use the function `synGetAnnotations` to view the annotations associated 
+with any file without downloading the file.
+
 ```{r, eval=FALSE}
 # the synID of a random fastq file from this list
 random_fastq <- "syn22108503"
@@ -202,35 +238,63 @@ fastq_annotations <- synGetAnnotations(random_fastq)
 fastq_annotations
 ```
 
-The file annotations let us see which study the file is associated with (Jax.IU.Pitt.5XFAD), which species it’s from (Mouse), which assay generated the file (rnaSeq), and a whole bunch of other properties. Most importantly, single-specimen files are annotated with with the specimenID of the specimen in the file, and the individualID of the individual that specimen was taken from. We can use these annotations to link files to the rest of the metadata, including metadata that is not in annotations. This is especially helpful for human studies, as potentially identifying information like age, race, and diagnosis is not included in file annotations.
+The file annotations let us see which study the file is associated with (`Jax.IU.Pitt.5XFAD`), which species it is from (mouse), which assay generated 
+the file (rnaSeq), and a whole bunch of other properties. Most importantly, single-specimen files are annotated with the `specimenID` of the specimen in the 
+file, and the `individualID` of the individual that specimen was taken from. We 
+can use these annotations to link files to the rest of the metadata, including 
+metadata that is not in annotations. This is especially helpful for human 
+studies, as potentially identifying information like age, race, and diagnosis is 
+not included in file annotations.
+
 ```{r, eval=FALSE}
-# find records belonging to the individual this file maps to in our joined metadata
+# find records belonging to the individual this file maps
+# to in our joined metadata
 joined_meta %>% 
-  filter(individualID == fastq_annotations$individualID[[1]])
+  filter(`individualID` == fastq_annotations$individualID[[1]])
 ```
+
 ## Annotations during bulk download
 
-When bulk downloading many files, the best practice is to preserve the download manifest that is generated which lists all the files, their synIDs, and all their annotations. If using the Synapse R client, follow the instructions in the Bulk download files section above.
+When bulk downloading many files, the best practice is to preserve the download manifest that is generated which lists all the files, their `synIDs`, and all 
+their annotations. If using the Synapse R client, follow the instructions in the 
+Bulk download files section above.
 
-If we use the “Programmatic Options” tab in the AD Portal download menu to download all 148 rnaSeq files from the 5XFAD study, we would get a table query that looks like this:
+If we use the “Programmatic Options” tab in the AD Portal download menu to 
+download all 148 rnaSeq files from the 5XFAD study, we would get a table query 
+that looks like this:
+
 ```{r, eval=FALSE}
-query <- synTableQuery("SELECT * FROM syn11346063.37 WHERE ( ( \"study\" HAS ( 'Jax.IU.Pitt_5XFAD' ) ) AND ( \"assay\" HAS ( 'rnaSeq' ) ) )")
+query <- synTableQuery("SELECT * FROM syn11346063.37 
+                       WHERE ( ( \"study\" HAS ( 'Jax.IU.Pitt_5XFAD' ) ) 
+                       AND ( \"assay\" HAS ( 'rnaSeq' ) ) )")
 ```
 
-As we saw previously, this downloads a csv file with the results of our AD Portal query. Opening that file lets us see which specimens are associated with which files:
+As we saw previously, this downloads a csv file with the results of our AD 
+Portal query. Opening that file lets us see which specimens are associated with
+which files:
+
 ```{r, eval=FALSE}
 annotations_table <- read_csv(query$filepath, show_col_types = FALSE)
 
 annotations_table
 ```
 
-You could then use purrr::walk(download_table$id, ~synGet(.x, downloadLocation = )) to walk through the column of synIDs and download all 148 files. However, because these are large files, it might be preferable to use the Python client or command line client for increased speed.
+You could then use 
+`purrr::walk(download_table$id, ~synGet(.x, downloadLocation = ))` to walk 
+through the column of `synIDs` and download all 148 files. However, because 
+these are large files, it might be preferable to use the Python client or 
+command line client for increased speed.
 
-Once you’ve downloaded all the files in the id column, you can link those files to their annotations by the name column.
+Once you’ve downloaded all the files in the `id` column, you can link those 
+files to their annotations by the `name` column.
+
 ```{r, eval=FALSE}
 # We'll use the "random fastq" that we got annotations for earlier
-# To avoid downloading the whole 3GB file, we'll use synGet with "downloadFile = FALSE" to get only the Synapse entity information, rather than the file. 
-# If we downloaded the actual file, we could find it in the directory and search using the filename. Since we're just downloading the Synapse entity wrapper object, we'll use the file name listed in the object properties.
+# To avoid downloading the whole 3GB file, we'll use synGet with 
+# "downloadFile = FALSE" to get only the Synapse entity information, rather than 
+# the file. If we downloaded the actual file, we could find it in the directory 
+# and search using the filename. Since we're just downloading the Synapse entity
+# wrapper object, we'll use the file name listed in the object properties.
 
 fastq <- synGet(random_fastq, downloadFile = FALSE)
 
@@ -238,20 +302,33 @@ fastq <- synGet(random_fastq, downloadFile = FALSE)
 annotations_table %>% 
   filter(name == fastq$properties$name)
 ```
+
 ## Multispecimen files
 
-Multispecimen files in the AD Knowledge Portal are files that contain data or information from more than one specimen. They are not annotated with individualIDs or specimenIDs, since these files may contain numbers of specimens that exceed the annotation limits. These files are usually processed or summary data (gene counts, peptide quantifications, etc), and are always annotated with isMultiSpecimen = TRUE.
+Multispecimen files in the AD Knowledge Portal are files that contain data or information from more than one specimen. They are not annotated with 
+`individualID`s or `specimenID`s, since these files may contain numbers of 
+specimens that exceed the annotation limits. These files are usually processed 
+or summary data (gene counts, peptide quantifications, etc), and are always 
+annotated with `isMultiSpecimen = TRUE`.
 
-If we look at the processed data files in the table of 5XFAD RNAseq file annotations we just downloaded, we will see that it isMultiSpecimen = TRUE, but individualID and specimenID are blank:
+If we look at the processed data files in the table of 5XFAD RNAseq file 
+annotations we just downloaded, we will see that it `isMultiSpecimen = TRUE`, 
+but `individualID` and `specimenID` are blank:
+
 ```{r, eval=FALSE}
 annotations_table %>% 
   filter(fileFormat == "txt") %>% 
   dplyr::select(name, individualID, specimenID, isMultiSpecimen)
 ```
-The multispecimen file should contain a row or column of specimenIDs that correspond to the specimenIDs used in a study’s metadata, as we have seen with the 5XFAD counts file.
+
+The multispecimen file should contain a row or column of `specimenID`s that 
+correspond to the `specimenID`s used in a study’s metadata, as we have seen with 
+the 5XFAD counts file.
 
 ```{r, warning=FALSE}
-# In this example, we take a slice of the counts data to reduce computation, transpose it so that each row represents a single specimen, and then join it to the joined metadata by the specimenID
+# In this example, we take a slice of the counts data to reduce computation, 
+# transpose it so that each row represents a single specimen, and then join it 
+# to the joined metadata by the `specimenID`
 counts %>% 
   slice_head(n = 5) %>% 
   t() %>% 
