reformat code, remove eval=FALSE, and add data from Box

--- a/episodes/differential-expression-analysis.Rmd
+++ b/episodes/differential-expression-analysis.Rmd
@@ -58,6 +58,7 @@ suppressPackageStartupMessages(library("dplyr"))
 In this lesson, we will use the raw counts matrix and metadata
 downloaded in the previous lesson and will perform differential
 expression analysis.
+
 ```{r}
 counts <- read.delim("data/htseqcounts_5XFAD.txt", check.names = FALSE)
 ```
@@ -81,7 +82,8 @@ distinct(covars, sex, genotype, timepoint)
 
 How many mice were used to produce this data?
 ```{r}
-covars %>% group_by(sex,genotype,timepoint) %>% 
+covars %>%
+  group_by(sex, genotype, timepoint) %>% 
   dplyr::count()
 ```
 
@@ -93,7 +95,7 @@ dim(counts)
 In the counts matrix, genes are in rows and samples are in columns.
 Let’s look at the first few rows.
 ```{r}
-head(counts,n=5)
+head(counts, n=5)
 ```
 
 As you can see, the gene ids are ENSEMBL IDs. There is some risk that
@@ -115,13 +117,15 @@ sum(duplicated(colnames(counts)))
 Now, as we see that gene_id is in first column of count matrix, but we
 will need only count data in matrix, so we will change the gene_id
 column to rownames. Converting the gene_id as rownames of count matrix
+
 ```{r}
 counts <- counts %>% 
-  column_to_rownames(.,var="gene_id") %>% 
+  column_to_rownames(., var="gene_id") %>% 
   as.data.frame()
 ```
 
 let’s confirm if change is done correctly
+
 ```{r}
 head(counts, n=5)
 ```
@@ -130,9 +134,10 @@ As you can see from count table there are some genes that start with
 “ENSG” and others start with “ENSMUSG”. “ENSG” referes to human gene
 ENSEMBL id and “ENSMUSG” refer to mouse ENSEMBL id. Let’s check how many
 gene_ids are NOT from the mouse genome by searching for the string “MUS”
-(as in Mus musculus) in the rownames of count matrix
+(as in Mus musculus) in the rownames of count matrix.
+
 ```{r}
-counts[,1:6] %>% 
+counts[, 1:6] %>% 
   filter(!str_detect(rownames(.), "MUS"))
 ```
 
@@ -151,12 +156,20 @@ by our MODEL-AD RNA-Seq pipeline.
 
 First we convert the dataframe to
 longer format and join our covariates by MouseID
+
 ```{r}
-count_tpose <- counts  %>%
-                rownames_to_column(.,var="gene_id") %>% 
-                filter(gene_id %in% c("ENSG00000080815","ENSMUSG00000019969","ENSG00000142192","ENSMUSG00000022892")) %>% 
-                pivot_longer(.,cols = -"gene_id",names_to = "specimenID",values_to="counts") %>% as.data.frame() %>%
-                left_join(covars, by="specimenID") %>% as.data.frame()
+count_tpose <-  counts  %>%
+                rownames_to_column(., var="gene_id") %>% 
+                filter(gene_id %in%
+                  c("ENSG00000080815",
+                    "ENSMUSG00000019969",
+                    "ENSG00000142192",
+                    "ENSMUSG00000022892")) %>%
+                pivot_longer(., cols = -"gene_id",
+                  names_to = "specimenID",  values_to="counts") %>%
+                as.data.frame() %>%
+                left_join(covars, by="specimenID") %>%
+                as.data.frame()
 
 head(count_tpose) 
 ```
@@ -165,13 +178,18 @@ Rename the APP and PSEN1 genes to specify whether mouse or human.
 
 ```{r}
 #make the age column a factor and re-order the levels
-count_tpose$timepoint <- factor(count_tpose$timepoint,levels=c("4 mo","6 mo","12 mo"))
+count_tpose$timepoint <- 
+  factor(count_tpose$timepoint,levels=c("4 mo","6 mo","12 mo"))
 
 # rename the gene id to gene symbol
-count_tpose$gene_id[count_tpose$gene_id %in% "ENSG00000142192"] <- "Human APP"
-count_tpose$gene_id[count_tpose$gene_id %in% "ENSG00000080815"] <- "Human PSEN1"
-count_tpose$gene_id[count_tpose$gene_id %in% "ENSMUSG00000022892"] <- "Mouse App"
-count_tpose$gene_id[count_tpose$gene_id %in% "ENSMUSG00000019969"] <- "Mouse Psen1"
+count_tpose$gene_id[count_tpose$gene_id %in% "ENSG00000142192"] <- 
+  "Human APP"
+count_tpose$gene_id[count_tpose$gene_id %in% "ENSG00000080815"] <- 
+  "Human PSEN1"
+count_tpose$gene_id[count_tpose$gene_id %in% "ENSMUSG00000022892"] <- 
+  "Mouse App"
+count_tpose$gene_id[count_tpose$gene_id %in% "ENSMUSG00000019969"] <- 
+  "Mouse Psen1"
 ```
 
 Visualize orthologous genes.
@@ -194,18 +212,22 @@ mouse App; human PSEN1 and mouse Psen1) and save summed expression as
 expression of mouse genes, respectively to match with gene names in
 control mice.
 ```{r}
-#merge mouse and human APP gene raw count
-counts[rownames(counts) %in% "ENSMUSG00000022892",] <- counts[rownames(counts) %in% "ENSMUSG00000022892",] + counts[rownames(counts) %in% "ENSG00000142192",]
-counts <- counts[!rownames(counts) %in% c("ENSG00000142192"),]
+# merge mouse and human APP gene raw count
+counts[rownames(counts) %in% "ENSMUSG00000022892",] <- 
+counts[rownames(counts) %in% "ENSMUSG00000022892",] + 
+counts[rownames(counts) %in% "ENSG00000142192",]
+counts <- counts[!rownames(counts) %in% c("ENSG00000142192"), ]
 
-#merge mouse and human PS1 gene raw count
-counts[rownames(counts) %in% "ENSMUSG00000019969",] <- counts[rownames(counts) %in% "ENSMUSG00000019969",] + counts[rownames(counts) %in% "ENSG00000080815",]
-counts <- counts[!rownames(counts) %in% c("ENSG00000080815"),]
+# merge mouse and human PS1 gene raw count
+counts[rownames(counts) %in% "ENSMUSG00000019969",] <- 
+counts[rownames(counts) %in% "ENSMUSG00000019969",] + 
+counts[rownames(counts) %in% "ENSG00000080815",]
+counts <- counts[!rownames(counts) %in% c("ENSG00000080815"), ]
 ```
 
 Let’s verify if expression of both human genes have been merged or not:
 ```{r}
-counts[,1:6] %>% 
+counts[, 1:6] %>% 
   filter(!str_detect(rownames(.), "MUS"))
 ```
 
@@ -233,18 +255,21 @@ DESeq2 analysis consist of multiple steps. We are going to briefly
 understand some of the important steps using subset of data and then we
 will perform differential analysis on whole dataset. 
 
-First, order the data (so counts and metadata specimenID orders match) and save as another
-variable name
+First, order the data (so counts and metadata specimenID orders match) and save 
+as another variable name.
+
 ```{r}
-rawdata <- counts[,sort(colnames(counts))]
-metadata <- covars[sort(rownames(covars)),]
+rawdata  <- counts[, sort(colnames(counts))]
+metadata <- covars[sort(rownames(covars)), ]
 ```
 
 subset the counts matrix and sample metadata to include only 12 month
 old male mice. You can amend the code to compare wild type and 5XFAD
 mice from either sex, at any time point.
+
 ```{r}
-meta.12M.Male <- metadata[(metadata$sex=="male" & metadata$timepoint=='12 mo'),]
+meta.12M.Male <- metadata[(metadata$sex=="male" & 
+                 metadata$timepoint=='12 mo'), ]
 
 meta.12M.Male
 ```
@@ -263,13 +288,13 @@ match(colnames(dat),rownames(meta.12M.Male))
 ```
 
 Next, we build the DESeqDataSet using the following function:
-```{r, eval=FALSE}
+```{r}
 ddsHTSeq <- DESeqDataSetFromMatrix(countData=dat, 
                                    colData=meta.12M.Male, 
                                    design = ~genotype)
 ```
 
-```{r, eval=FALSE}
+```{r}
 ddsHTSeq
 ```
 
@@ -285,7 +310,7 @@ differential expression are not plotted.
 
 Here we perform a minimal pre-filtering to keep only rows that have at
 least 10 reads total.
-```{r, eval=FALSE}
+```{r}
 ddsHTSeq <- ddsHTSeq[rowSums(counts(ddsHTSeq)) >= 10,]
 
 ddsHTSeq
@@ -300,13 +325,13 @@ represents the control group), the comparisons will be based on the
 alphabetical order of the levels.
 
 specifying the reference-level to 5XFAD_noncarrier:
-```{r, eval=FALSE}
+```{r}
 ddsHTSeq$genotype <- relevel(ddsHTSeq$genotype,ref="5XFAD_noncarrier")  
 ```
 
 Run the standard differential expression analysis steps that is wrapped
 into a single function, DESeq.
-```{r, eval=FALSE}
+```{r}
 dds <- DESeq(ddsHTSeq,parallel = TRUE)
 ```
 
@@ -315,30 +340,30 @@ a results table with log2 fold changes, p values and adjusted p values.
 By default the argument alpha is set to 0.1. If the adjusted p value
 cutoff will be a value other than 0.1, alpha should be set to that
 value:
-```{r, eval=FALSE}
+```{r}
 res <- results(dds,alpha=0.05)  # setting 0.05 as significant threshold
 res
 ```
 
 We can order our results table by the smallest p value:
-```{r, eval=FALSE}
+```{r}
 resOrdered <- res[order(res$pvalue),]
 
 head(resOrdered,n=10)
 ```
 
 we can summarize some basic tallies using the summary function.
-```{r, eval=FALSE}
+```{r}
 summary(res)
 ```
 
 How many adjusted p-values were less than 0.05?
-```{r, eval=FALSE}
+```{r}
 sum(res$padj < 0.05, na.rm=TRUE)
 ```
 
 How many adjusted p-values were less than 0.1?
-```{r, eval=FALSE}
+```{r}
 sum(res$padj < 0.1, na.rm=TRUE)
 ```
 
@@ -348,7 +373,7 @@ We’ll use a package
 to translate mouse ENSEMBL IDS to gene names. Run this function and they
 will be called up when assembling results from the differential
 expression analysis
-```{r, eval=FALSE}
+```{r}
 map_function.df <- function(x, inputtype, outputtype) {
   mapIds(
     org.Mm.eg.db,
@@ -363,7 +388,7 @@ map_function.df <- function(x, inputtype, outputtype) {
 **Generating Results table**
 
 Here we will call the function to get the 'symbol' names of the genes incorporated into the results table, along with the columns we are most interested in
-```{r, eval=FALSE}
+```{r}
 All_res <- as.data.frame(res) %>% 
   mutate(symbol = map_function.df(res,"ENSEMBL","SYMBOL")) %>%    ##run map_function to add symbol of gene corresponding to ENSEBL ID
   mutate(EntrezGene = map_function.df(res,"ENSEMBL","ENTREZID")) %>%  ##run map_function to add Entrez ID of gene corresponding to ENSEBL ID
@@ -375,17 +400,17 @@ head(All_res)
 **Extracting genes that are significantly expressed**
 
 Let's subset all the genes with a pvalue < 0.05
-```{r, eval=FALSE}
+```{r}
 dseq_res <- subset(All_res[order(All_res$padj), ], padj < 0.05)
 ```
 
 Wow! We have a lot of genes with apparently very strong statistically
 significant differences between the control and 5xFAD carrier.
-```{r, eval=FALSE}
+```{r}
 dim(dseq_res)
 ```
 
-```{r, eval=FALSE}
+```{r}
 head(dseq_res)
 ```
 
@@ -394,7 +419,7 @@ head(dseq_res)
 **Exporting results to CSV files** 
 
 we can save results file into a csv file like this:
-```{r, eval=FALSE}
+```{r}
 write.csv(All_res,file="results/All_5xFAD_12months_male.csv")
 write.csv(dseq_res,file="results/DEG_5xFAD_12months_male.csv")
 ```
@@ -407,7 +432,7 @@ volcano plot, only a single data-frame, data-matrix, or tibble of test
 results is required, containing point labels, log2FC, and adjusted or
 unadjusted P values. The default cut-off for log2FC is \>\|2\|; the
 default cut-off for P value is 10e-6.
-```{r, eval=FALSE}
+```{r}
 EnhancedVolcano(All_res,
                                    lab = (All_res$symbol),
                                    x = 'log2FoldChange',
@@ -427,16 +452,16 @@ genes are upregulated in the 5XFAD strain.
 **Principal component plot of the samples**
 
 Principal component analysis is a dimension reduction technique that reduces the dimensionality of these large matrixes into a linear coordinate system, so that we can more easily visualize what factors are contributing the most to variation in the dataset by graphing the principal components. 
-```{r, eval=FALSE}
+```{r}
 ddsHTSeq <- DESeqDataSetFromMatrix(countData=as.matrix(rawdata), colData=metadata, design= ~ genotype)
 ```
 
-```{r, eval=FALSE}
+```{r}
 ddsHTSeq <- ddsHTSeq[rowSums(counts(ddsHTSeq)>1) >= 10, ]
 dds <- DESeq(ddsHTSeq,parallel = TRUE)
 ```
 
-```{r, eval=FALSE}
+```{r}
 vsd <- varianceStabilizingTransformation(dds, blind=FALSE)
 
 plotPCA(vsd, intgroup=c("genotype", "sex","timepoint"))
@@ -444,7 +469,7 @@ plotPCA(vsd, intgroup=c("genotype", "sex","timepoint"))
 We can see that clustering is occurring, though it's kind of hard to see exactly how they are clustering in this visualization.
 
 It is also possible to customize the PCA plot using the ggplot function.
-```{r, eval=FALSE}
+```{r}
 pcaData <- plotPCA(vsd, intgroup=c("genotype", "sex","timepoint"), returnData=TRUE)
 percentVar <- round(100 * attr(pcaData, "percentVar"))
 ggplot(pcaData, aes(PC1, PC2,color=genotype, shape=sex)) + 
@@ -465,7 +490,7 @@ molecular changes in animals.
 Finally, we can build a function for differential analysis that consists of all 
 above discussed steps. It will require to input sorted raw count matrix, sample 
 metadata and define the reference group.
-```{r, eval=FALSE}
+```{r}
 DEG <- function(rawdata, meta,
                    include.batch = FALSE,
                    ref = ref) {
@@ -531,7 +556,7 @@ comparisons
 
 Finally, we implement our DEG function on each case/control comparison of
 interest and store the result table in a list and data frame:
-```{r, eval=FALSE}
+```{r}
 # initiate an empty list and data frame to save results
 DE_5xFAD.list <- list()
 DE_5xFAD.df <- data.frame()
@@ -551,40 +576,40 @@ for (i in 1:nrow(comparisons))
 ```
 
 Let’s explore the result stored in our list:
-```{r, eval=FALSE}
+```{r}
 names(DE_5xFAD.list)
 ```
 
 We can easily extract the result table for any group of interest by using \$
 and name of group. Let’s check top few rows from 5XFAD_carrier-male-4 mo
 group:
-```{r, eval=FALSE}
+```{r}
 head(DE_5xFAD.list$`5XFAD_carrier-male-4 mo`)
 ```
 
 Let’s check the result stored as dataframe:
-```{r, eval=FALSE}
+```{r}
 head(DE_5xFAD.df)
 ```
 
 Check if result is present for all ages:
-```{r, eval=FALSE}
+```{r}
 unique((DE_5xFAD.df$age))
 ```
 
 Check if result is present for both sexes:
-```{r, eval=FALSE}
+```{r}
 unique((DE_5xFAD.df$sex))
 ```
 
 Check number of genes in each group:
-```{r, eval=FALSE}
+```{r}
 dplyr::count(DE_5xFAD.df,model,sex,age)
 ```
 
 Check number of genes significantly differentially expressed in all
 cases compared to age and sex-matched controls:
-```{r, eval=FALSE}
+```{r}
 degs.up <- map(DE_5xFAD.list, ~length(which(.x$padj<0.05 & .x$log2FoldChange>0)))
 degs.down <- map(DE_5xFAD.list, ~length(which(.x$padj<0.05 & .x$log2FoldChange<0)))
 deg <- data.frame(Cases=names(degs.up), Up_DEGs.pval.05=as.vector(unlist(degs.up)),Down_DEGs.pval.05=as.vector(unlist(degs.down)))
@@ -601,7 +626,7 @@ We may wish to look for enrichment of biological
 pathways in a list of differentially expressed genes. Here we will test
 for enrichment of KEGG pathways using using enrichKEGG function in
 clusterProfiler package.
-```{r, eval=FALSE}
+```{r}
 dat <- list(FAD_M_4=subset(DE_5xFAD.list$`5XFAD_carrier-male-4 mo`[order(DE_5xFAD.list$`5XFAD_carrier-male-4 mo`$padj), ], padj < 0.05) %>% pull(EntrezGene),
             FAD_F_4=subset(DE_5xFAD.list$`5XFAD_carrier-female-4 mo`[order(DE_5xFAD.list$`5XFAD_carrier-female-4 mo`$padj), ], padj < 0.05) %>% pull(EntrezGene))
 
@@ -617,7 +642,7 @@ enrich_pathway@compareClusterResult$Description <- gsub(" - Mus musculus \\(hous
 
 Let’s plot top enriched functions using dotplot function of
 clusterProfiler package.
-```{r, eval=FALSE}
+```{r}
 clusterProfiler::dotplot(enrich_pathway,showCategory=10,font.size = 14,title="Enriched KEGG Pathways")
 ```
 
@@ -632,7 +657,7 @@ lesson. Save it now and we will load it at the beginning of the next
 lesson. We will use R’s save command to save the objects in compressed,
 binary format. The save command is useful when you want to save multiple
 objects in one file.
-```{r, eval=FALSE}
+```{r}
 save(DE_5xFAD.df,DE_5xFAD.list,file="results/DEAnalysis_5XFAD.Rdata")
 ```
 
